--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -1,12 +1,15 @@
 body {
   font-family: Poppins;
-  font-size: 15px
+  font-size: 15px;
+  background-color: hsl(0, 0%, 98%);
 }
 
 h1 {
   font-size: 23px;
+  font-weight: 200;
 }
 
 h2 {
   font-size: 20px;
+  font-weight: 400;
 }
