--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -13,3 +13,9 @@ h2 {
   font-size: 20px;
   font-weight: 400;
 }
+
+.top-text {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
