--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -6,16 +6,16 @@ body {
 
 h1 {
   font-size: 23px;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 h2 {
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .top-text {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
 }
