--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -1,17 +1,23 @@
 body {
   font-family: Poppins;
   font-size: 15px;
+  font-weight: 200;
   background-color: hsl(0, 0%, 98%);
 }
 
 h1 {
   font-size: 23px;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 h2 {
   font-size: 20px;
   font-weight: 600;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .top-text {
