--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -23,7 +23,7 @@ h3 {
 .top-text {
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
   margin: 0px;
   padding: 0px;
 }
