--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -27,7 +27,12 @@ h3 {
   margin-top: 200px;
 }
 
-div #top-text-h1 {
+#top-text-h1 {
   margin-bottom: 0px;
   padding-bottom: 0px;
+}
+
+#top-text-main {
+  margin-top: 0px;
+  padding-top: 0px;
 }
