--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -32,6 +32,11 @@ h3 {
   padding-bottom: 0;
 }
 
+#top-text-h2 {
+  margin: 0;
+  padding: 0;
+}
+
 #top-text-main {
   margin-top: 0;
   padding-top: 0;
