--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Poppins;
   font-size: 15px;
   font-weight: 200;
-  background-color: hsl(229, 6%, 66%);
+  background-color: hsl(0, 0%, 98%);
 }
 
 h1 {
@@ -44,4 +44,5 @@ h3 {
   height: 100px;
   width: 250px;
   background-color: hsl(0, 0%, 98%);
+  box-shadow: 0 0 30px hsl(229, 6%, 66%);
 }
