--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -47,4 +47,5 @@ h3 {
   padding: 10px 25px 50px 25px;
   background-color: hsl(0, 0%, 98%);
   box-shadow: 0 0 30px hsl(229, 6%, 66%);
+  border-top: solid 7px hsl(0, 78%, 62%);
 }
