--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -40,7 +40,7 @@ h3 {
 .content-box {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   height: 100px;
   width: 250px;
   margin: 50px 25px;
