--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -55,6 +55,7 @@ h3 {
   background-color: hsl(0, 0%, 98%);
   box-shadow: 0 0 30px hsl(229, 6%, 66%);
   border-radius: 5px;
+  text-align: left;
 }
 
 #sup {
