--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -48,8 +48,8 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 100px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   margin: 50px 25px;
   padding: 10px 25px 50px 25px;
   background-color: hsl(0, 0%, 98%);
@@ -60,6 +60,7 @@ h3 {
 
 .content-box-body p{
   text-align: left;
+  font-size: 12px;
 }
 
 .content-box-img {
