--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -48,7 +48,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 300px;
+  height: 150px;
   width: 300px;
   margin: 50px 25px;
   padding: 10px 25px 50px 25px;
@@ -61,6 +61,7 @@ h3 {
 .content-box-body p{
   text-align: left;
   font-size: 12px;
+  margin-bottom: 25px;
 }
 
 .content-box-img {
