--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -89,11 +89,18 @@ h3 {
 }
 
 @media only screen and (max-width: 480px) {
+  h1, h2 {
+    font-size: 20px;
+  }
+  .top-text-main {
+    width: 75%;
+  }
   .content-box {
     width: 75%;
     height: 50%;
   }
   .content-boxes {
     flex-direction: column;
+    align-items: center;
   }
 }
