--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -104,6 +104,8 @@ h3 {
     align-items: center;
   }
   .stacked-boxes {
-    align-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
