--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -102,10 +102,15 @@ h3 {
   .content-boxes {
     flex-direction: column;
     align-items: center;
+    margin: 0;
   }
   .stacked-boxes {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .content-box-img {
+    height: 25px;
+    width: 25px;
   }
 }
