--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -108,8 +108,8 @@ h3 {
     flex-direction: column;
     align-items: center;
   }
-  .content-box-img {
-    height: 15px;
-    width: 15px;
+  .content-box-title {
+    padding-bottom: 0;
   }
+  
 }
