--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -108,7 +108,8 @@ h3 {
     flex-direction: column;
     align-items: center;
   }
-  .content-box-title {
+  .content-box-title h3 {
+    padding-bottom: 0;
     margin-bottom: 0;
   }
   
