--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -102,6 +102,7 @@ h3 {
   .content-boxes {
     flex-direction: column;
     align-items: center;
+    margin: 0 0 20px 0;
   }
   .stacked-boxes {
     display: flex;
@@ -109,7 +110,6 @@ h3 {
     align-items: center;
   }
   .content-box-title h3 {
-    padding-bottom: 0;
     margin-bottom: 0;
   }
   
