--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -100,7 +100,8 @@ h3 {
   }
   .content-box {
     width: 75%;
-    height: 50%;
+    height: auto%;
+    padding-bottom: 25px;
     margin: 0 0 20px 0;
   }
   .content-boxes {
@@ -113,7 +114,7 @@ h3 {
     align-items: center;
   }
   .content-box-title h3 {
-    margin-bottom: 0;
+    margin-bottom: 10 px;
   }
   .content-box-body p {
     font-size: 12 px;
