--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -98,6 +98,9 @@ h3 {
   #top-text-main {
     width: 75%;
   }
+  #top-text-main p {
+    font-size: 18px;
+  }
   .content-box {
     width: 75%;
     height: auto%;
@@ -112,9 +115,6 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .content-box-body p {
-    font-size: 12px;
   }
   
 }
